# TheZapCoin

./: .gitignore  Anchor.toml  DEPLOYMENT.md  LICENSE  README.md  SOLANA_INTEGRATION.md  SOLANA_README.md  build.js  bun.lockb  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
programs/: README.md
programs/zapcoin/: Cargo.toml  SOLANA_INTEGRATION.md
programs/zapcoin/src/: lib.rs
public/: test.html
src/: App.tsx  App.tsx.example  INTEGRATION.MD  index.css  main.tsx  polyfills.ts  test.tsx
src/components/: CyclingText.tsx  FeatureCard.tsx  InteractiveBackground.tsx  MainScript.tsx  Navbar.tsx  PhilosophyCarousel.tsx  ScrollAnimation.tsx  SolanaInitializer.tsx  WalletConnect.tsx  ZapLogo.tsx
src/components/examples/: SolanaExample.tsx  index.ts
src/components/marketplace/: BNPLLoans.tsx  EnergyListings.tsx  EnergySources.tsx  Leaderboard.tsx  PriceGraph.tsx  StatsCards.tsx  TradeSwapModule.tsx  UserBalance.tsx
src/components/wallet/: WalletButton.tsx  WalletProvider.tsx  index.ts
src/lib/solana/: bnpl.ts  energy.ts  index.ts  marketplace.ts  zapcoin.json
src/pages/: HowItWorks.tsx  Index.tsx  Marketplace.tsx  NotFound.tsx  SolanaDemo.tsx
src/types/: global.d.ts
tests/: zapcoin.ts
