[package]
name = "zapcoin"
version = "0.1.0"
description = "Zapcoin - A Solana-powered platform that combines Buy Now Pay Later (BNPL) with renewable energy repayment"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zapcoin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "=1.16.0"
